--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0"
+    "express-fileupload": "^1.4.0",
+    "express-validator": "^6.14.3",
+    "mongoose": "^6.9.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/express-fileupload": "^1.4.1",
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5"
